fix page display on mobile divices

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body{
 }
 
 .header{
-    background-color: #171321;
+    background-color: #1F2937;
     text-align: center;
     padding: 20px 0px;
     color: red;
@@ -77,6 +77,7 @@ button {
     text-align: center;
     justify-content: center;
     padding: 30px 0px;
+    align-items: center;
 }
 
 .menu{
@@ -84,7 +85,7 @@ button {
     flex-direction: column;
     text-align: center;
     align-items: center;
-    background-color: #202020;
+    background-color: #252525;
     padding: 40px;
 }
 
@@ -94,7 +95,6 @@ button {
     justify-content: center;
     align-items: center;
     padding: 15px;
-    width: 100%;
     gap: 10px;
     background-color: #1F2937;
     color: white;
@@ -113,4 +113,16 @@ button {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+@media only screen and (max-device-width: 480px) {
+    .container{
+             display: grid;
+             grid-template-columns:repeat(16, 1fr);
+             grid-template-rows: repeat(16, 1fr);
+             border: solid rgb(156, 156, 156);
+             text-align: center;
+             height: 400px;
+             width: 400px;
+}
+
 }
